--- a/todoList/todoList/Base.lproj/Main.storyboard
+++ b/todoList/todoList/Base.lproj/Main.storyboard
@@ -15,17 +15,30 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k9c-7f-xNr">
-                                <rect key="frame" x="0.0" y="140" width="414" height="722"/>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hYu-aq-EeC">
+                                <rect key="frame" x="0.0" y="140" width="414" height="32"/>
+                                <segments>
+                                    <segment title="A - Z"/>
+                                    <segment title="Due Date"/>
+                                </segments>
+                                <connections>
+                                    <action selector="sortSegmentWithSender:" destination="BYZ-38-t0r" eventType="valueChanged" id="bXT-Vh-kHV"/>
+                                </connections>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k9c-7f-xNr">
+                                <rect key="frame" x="0.0" y="171" width="414" height="722"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="k9c-7f-xNr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="HZ6-Bp-Oyf"/>
-                            <constraint firstItem="k9c-7f-xNr" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="cQf-4X-lNN"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="k9c-7f-xNr" secondAttribute="bottom" id="fwr-x9-HP4"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="k9c-7f-xNr" secondAttribute="trailing" id="zS0-pG-zga"/>
+                            <constraint firstItem="hYu-aq-EeC" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="FNH-Il-a00"/>
+                            <constraint firstItem="k9c-7f-xNr" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Qc2-3u-Abx"/>
+                            <constraint firstItem="k9c-7f-xNr" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Ran-af-ZAb"/>
+                            <constraint firstItem="k9c-7f-xNr" firstAttribute="top" secondItem="hYu-aq-EeC" secondAttribute="bottom" id="cL8-lj-fC4"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="hYu-aq-EeC" secondAttribute="trailing" id="kWA-Yq-bF3"/>
+                            <constraint firstAttribute="bottom" secondItem="k9c-7f-xNr" secondAttribute="bottom" id="sRu-Ab-dDK"/>
+                            <constraint firstItem="hYu-aq-EeC" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="v7i-xm-C8t"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -61,7 +74,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="MIL-fu-M0q">
-                                <rect key="frame" x="0.0" y="196" width="414" height="216"/>
+                                <rect key="frame" x="0.0" y="196" width="414" height="666"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="BEL-D6-I14"/>
                                 </constraints>
