--- a/todoList/todoList/Base.lproj/Main.storyboard
+++ b/todoList/todoList/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Todo List-->
+        <!--🧠 To-do List-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="root" id="BYZ-38-t0r" customClass="ViewController" customModule="todoList" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="hYu-aq-EeC">
-                                <rect key="frame" x="0.0" y="140" width="414" height="32"/>
+                                <rect key="frame" x="0.0" y="148.5" width="414" height="32"/>
                                 <segments>
                                     <segment title="A - Z"/>
                                     <segment title="Due Date"/>
@@ -42,7 +42,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Todo List" id="Z7n-dC-D1S">
+                    <navigationItem key="navigationItem" title="🧠 To-do List" id="Z7n-dC-D1S">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Lqx-bk-nwd">
                             <connections>
                                 <action selector="didTapAddButton" destination="BYZ-38-t0r" id="Iqd-XR-ksr"/>
@@ -65,7 +65,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ygo-zt-Lns">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="To-Do" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ygo-zt-Lns">
                                 <rect key="frame" x="20" y="94" width="374" height="52"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="52" id="5Yo-XM-jdy"/>
@@ -74,26 +74,39 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="MIL-fu-M0q">
-                                <rect key="frame" x="0.0" y="196" width="414" height="666"/>
+                                <rect key="frame" x="0.0" y="286" width="414" height="300"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="300" id="BEL-D6-I14"/>
                                 </constraints>
                             </datePicker>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6ch-BW-smC">
+                                <rect key="frame" x="20" y="156" width="374" height="100"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="svQ-jI-Ff3"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
+                            <constraint firstItem="NKb-sp-b34" firstAttribute="trailing" secondItem="6ch-BW-smC" secondAttribute="trailing" constant="20" id="0C5-mx-80i"/>
                             <constraint firstItem="NKb-sp-b34" firstAttribute="trailing" secondItem="ygo-zt-Lns" secondAttribute="trailing" constant="20" id="654-fe-Xbb"/>
-                            <constraint firstItem="MIL-fu-M0q" firstAttribute="leading" secondItem="P5b-pE-Z40" secondAttribute="leading" id="AIq-u6-X5P"/>
-                            <constraint firstItem="NKb-sp-b34" firstAttribute="trailing" secondItem="MIL-fu-M0q" secondAttribute="trailing" id="U2Q-zT-H6f"/>
+                            <constraint firstItem="MIL-fu-M0q" firstAttribute="top" secondItem="6ch-BW-smC" secondAttribute="bottom" constant="30" id="8jG-SG-5fV"/>
+                            <constraint firstItem="6ch-BW-smC" firstAttribute="leading" secondItem="NKb-sp-b34" secondAttribute="leading" constant="20" id="9B1-Re-cmw"/>
+                            <constraint firstItem="MIL-fu-M0q" firstAttribute="trailing" secondItem="NKb-sp-b34" secondAttribute="trailing" id="QiR-C7-93p"/>
                             <constraint firstItem="ygo-zt-Lns" firstAttribute="top" secondItem="NKb-sp-b34" secondAttribute="top" constant="50" id="fJc-vF-C6g"/>
-                            <constraint firstItem="MIL-fu-M0q" firstAttribute="top" secondItem="ygo-zt-Lns" secondAttribute="bottom" constant="50" id="ixe-p8-q7Y"/>
-                            <constraint firstItem="NKb-sp-b34" firstAttribute="bottom" secondItem="MIL-fu-M0q" secondAttribute="bottom" id="mWP-bw-8Cr"/>
+                            <constraint firstItem="6ch-BW-smC" firstAttribute="top" secondItem="ygo-zt-Lns" secondAttribute="bottom" constant="10" id="gJU-Hc-zVs"/>
+                            <constraint firstItem="MIL-fu-M0q" firstAttribute="leading" secondItem="NKb-sp-b34" secondAttribute="leading" id="mbO-b4-gEX"/>
                             <constraint firstItem="ygo-zt-Lns" firstAttribute="leading" secondItem="NKb-sp-b34" secondAttribute="leading" constant="20" id="o4B-Gz-3ok"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="NKb-sp-b34"/>
                     </view>
                     <connections>
                         <outlet property="datePicker" destination="MIL-fu-M0q" id="dGR-wY-w8I"/>
+                        <outlet property="detailsField" destination="6ch-BW-smC" id="6TW-Ww-Eff"/>
                         <outlet property="textField" destination="ygo-zt-Lns" id="u5P-lL-0su"/>
                     </connections>
                 </viewController>
@@ -109,38 +122,76 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zsm-ZZ-XPH">
-                                <rect key="frame" x="20" y="64" width="374" height="70"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="📝 To-do" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NKp-hO-haw">
+                                <rect key="frame" x="20" y="64" width="75.5" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zsm-ZZ-XPH">
+                                <rect key="frame" x="20" y="95" width="374" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="yzk-0U-mGj"/>
+                                    <constraint firstAttribute="height" constant="30" id="MsE-NY-1Ob"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80t-zf-SF4">
-                                <rect key="frame" x="20" y="144" width="374" height="70"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="⌛️ Due" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uKu-Qx-pxN">
+                                <rect key="frame" x="20" y="145" width="59.5" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="✍🏽 Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mq8-29-8Ev">
+                                <rect key="frame" x="20" y="226" width="122" height="21"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="80t-zf-SF4">
+                                <rect key="frame" x="20" y="176" width="374" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="70" id="t3o-FM-HVM"/>
+                                    <constraint firstAttribute="height" constant="30" id="t3o-FM-HVM"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="903-ya-caa">
+                                <rect key="frame" x="20" y="257" width="374" height="100"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="QJ5-ZK-Iee"/>
+                                </constraints>
+                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="80t-zf-SF4" firstAttribute="top" secondItem="Zsm-ZZ-XPH" secondAttribute="bottom" constant="10" id="6kZ-Qa-Hdd"/>
+                            <constraint firstItem="80t-zf-SF4" firstAttribute="top" secondItem="uKu-Qx-pxN" secondAttribute="bottom" constant="10" id="1tu-HS-pOR"/>
+                            <constraint firstItem="903-ya-caa" firstAttribute="top" secondItem="mq8-29-8Ev" secondAttribute="bottom" constant="10" id="2KU-34-f49"/>
+                            <constraint firstItem="uKu-Qx-pxN" firstAttribute="top" secondItem="Zsm-ZZ-XPH" secondAttribute="bottom" constant="20" id="8F3-FB-2A5"/>
+                            <constraint firstItem="mq8-29-8Ev" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="8WG-Mp-y0z"/>
+                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="Zsm-ZZ-XPH" secondAttribute="trailing" constant="20" id="A7l-kU-paL"/>
                             <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="80t-zf-SF4" secondAttribute="trailing" constant="20" id="Ff8-DQ-EeH"/>
                             <constraint firstItem="80t-zf-SF4" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="Hbh-KD-uAW"/>
-                            <constraint firstItem="Zsm-ZZ-XPH" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="K0Z-hF-JgA"/>
-                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="Zsm-ZZ-XPH" secondAttribute="trailing" constant="20" id="jVb-vY-Wj0"/>
-                            <constraint firstItem="Zsm-ZZ-XPH" firstAttribute="top" secondItem="kKW-3a-ymh" secondAttribute="top" constant="20" id="uPM-w2-afr"/>
+                            <constraint firstItem="kKW-3a-ymh" firstAttribute="trailing" secondItem="903-ya-caa" secondAttribute="trailing" constant="20" id="NHR-TA-brK"/>
+                            <constraint firstItem="NKp-hO-haw" firstAttribute="top" secondItem="kKW-3a-ymh" secondAttribute="top" constant="20" id="PH9-sw-qwg"/>
+                            <constraint firstItem="NKp-hO-haw" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="PWh-6J-qlZ"/>
+                            <constraint firstItem="903-ya-caa" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="Qmf-ry-26T"/>
+                            <constraint firstItem="mq8-29-8Ev" firstAttribute="top" secondItem="80t-zf-SF4" secondAttribute="bottom" constant="20" id="Ux5-mA-MGN"/>
+                            <constraint firstItem="Zsm-ZZ-XPH" firstAttribute="top" secondItem="NKp-hO-haw" secondAttribute="bottom" constant="10" id="arj-41-LAY"/>
+                            <constraint firstItem="uKu-Qx-pxN" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="hf3-yz-uLR"/>
+                            <constraint firstItem="Zsm-ZZ-XPH" firstAttribute="leading" secondItem="kKW-3a-ymh" secondAttribute="leading" constant="20" id="z8Q-vi-fHH"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="kKW-3a-ymh"/>
                     </view>
                     <connections>
                         <outlet property="dateLabel" destination="80t-zf-SF4" id="1Ce-ai-zCF"/>
+                        <outlet property="detailLabel" destination="903-ya-caa" id="OE5-Kn-yBd"/>
                         <outlet property="itemLabel" destination="Zsm-ZZ-XPH" id="qjJ-ek-0au"/>
                     </connections>
                 </viewController>
